--- a/uslugi.scss
+++ b/uslugi.scss
@@ -260,12 +260,12 @@ footer {
 
     /* Центрируем изображение по горизонтали и вертикали */
     background-position: center;
-    min-height: 10vh;
+
     color: white;
 
     .zatemnenie {
         background-color: rgba(0, 0, 0, 0.7);
-        min-height: 10vh;
+        
 img{
     padding: 1% 0 0 1%;
     max-width: 10%;
@@ -277,3 +277,4 @@ img{
 
     }
 }
+a{color: white;}
